--- a/question/templates/question/t_question.html
+++ b/question/templates/question/t_question.html
@@ -286,7 +286,7 @@
         </div>
         </div>
         <div class="MemberButtonGroup AnswerAuthor-buttons">
-        <button class="Button FollowButton Button--primary Button--green" type="button" data-er-id="{{push_answer.author__id}}" data-er-sexual="{{push_answer.author__userprofile__sexual}}" data-follow-type="people" data-followed="false" data-who="she">关注</button>
+        <button class="Button FollowButton Button--primary Button--green" type="button" data-author-id="{{push_answer.author__id}}" data-author-name="{{push_answer.author__first_name}}" data-author-sexual="{{push_answer.author__userprofile__sexual}}" data-follow-type="people" data-followed="false" data-who="she">关注</button>
         <button class="Button" type="button" data-toggle="modal" data-target="#letterModal">发私信</button>
         </div>
         </div>
