--- a/question/templates/question/t_answer_mobile.html
+++ b/question/templates/question/t_answer_mobile.html
@@ -9,7 +9,7 @@
 {% include 'question/header_mobile.html' %}
 </div>
 <!--------------------main---------------------->
-<main role="main" class="App-main" data-module="answer_page" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}","user_avatar":"{{user.userprofile.avatar}}","type":"{{type}}"}'>
+<main role="main" class="App-main" data-module="answer_page" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}","type":"{{type}}"}'>
 <div class="ContentLayout">
 
 <div class="ContentLayout-mainColumn">
