--- a/question/templates/question/t_index.html
+++ b/question/templates/question/t_index.html
@@ -8,7 +8,7 @@
 </div>-->
 
 <!--------------------main---------------------->
-<main role="main" class="App-main" data-module="index" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}"}'>
+<main role="main" class="App-main" data-module="index" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}"}'>
 <div class="Topstory">
 <div class="Topstory-container">
 <div class="Topstory-mainColumn">
