--- a/question/templates/question/t_index_mobile.html
+++ b/question/templates/question/t_index_mobile.html
@@ -9,7 +9,7 @@
 {% include 'question/header_mobile.html' %}
 </div>
 
-<main role="main" class="App-main" data-module="index" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}","user_avatar":"{{user.userprofile.avatar}}"}'>
+<main role="main" class="App-main" data-module="index" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}"}'>
 <div id="topstory">
 <div class="TopstoryMain">
 <div id="appendArea" class="">
