--- a/question/templates/question/t_mytopic.html
+++ b/question/templates/question/t_mytopic.html
@@ -4,7 +4,7 @@
 <body class="Entry-body">
 {% include 'question/header.html' %}
 
-<main role="main" class="App-main" data-module="mytopic" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}"}'>
+<main role="main" class="App-main" data-module="mytopic" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}"}'>
 <div class="ContentLayout">
 <div class="ContentLayout-mainColumn">       
 <div class="Card">
