--- a/question/templates/question/t_question_mobile.html
+++ b/question/templates/question/t_question_mobile.html
@@ -9,7 +9,7 @@
 <div>
 {% include 'question/header_mobile.html' %}
 </div>
-<main role="main" class="App-main"  data-module="question" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}","user_avatar":"{{user.userprofile.avatar}}","question_id":"{{question.0}}","question_title":"{{question.1}}","question_detail":"{{question.2}}","question_answer_nums":"{{question.3}}","question_follower_nums":"{{question.4}}","question_click_nums":"{{question.5}}"}'>
+<main role="main" class="App-main"  data-module="question" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}","question_id":"{{question.0}}","question_title":"{{question.1}}","question_detail":"{{question.2}}","question_answer_nums":"{{question.3}}","question_follower_nums":"{{question.4}}","question_click_nums":"{{question.5}}"}'>
 <div>
 
 
