--- a/question/templates/question/t_search_mobile.html
+++ b/question/templates/question/t_search_mobile.html
@@ -11,7 +11,7 @@
 
 </div>
 
-<main role="main" class="App-main" data-module="search" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","search_keyword":"{{keyword}}","search_type":"{{type}}"}'>
+<main role="main" class="App-main" data-module="search" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}","search_keyword":"{{keyword}}","search_type":"{{type}}"}'>
 
 <div id="search">
 
