--- a/question/templates/question/t_setting_mobile.html
+++ b/question/templates/question/t_setting_mobile.html
@@ -12,7 +12,7 @@
 
 </div>
 
-<main role="main" class="App-main" data-module="setting" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}","user_avatar":"{{user.userprofile.avatar}}","type":"{{type}}","conversation_id":"{{conversation_id}}","parter_name":"{{parter_name}}"}'>
+<main role="main" class="App-main" data-module="setting" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}","type":"{{type}}","conversation_id":"{{conversation_id}}"}'>
 
 <div id="settings">
 
