--- a/question/templates/question/t_write_mobile.html
+++ b/question/templates/question/t_write_mobile.html
@@ -11,7 +11,7 @@
 </div>
 
 <!--------------------main---------------------->
-<main role="main" class="App-main" data-module="write" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}","user_avatar":"{{user.userprofile.avatar}}"}'>
+<main role="main" class="App-main" data-module="write" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}"}'>
 <div class="Layout av-cardBackground">
 <div class="Layout-main av-card">
 <form method="post" action="/write/">
