--- a/question/templates/question/t_article.html
+++ b/question/templates/question/t_article.html
@@ -4,7 +4,7 @@
 <body class="">
 {% include 'question/header.html' %}
 <div class="LoadingBar"></div>
-<main role="main" class="App-main" data-module="article" data-article-content="{{article.content}}" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","article_id":"{{article.id}}","article_title":"{{article.title}}","article_like_nums":"{{article.like_nums}}","article_comment_nums":"{{article.comment_nums}}","article_pub_date":"{{article_pub_date}}","followed":"{{followed}}","author_id":"{{article.author.id}}","author_name":"{{article.author.first_name}}","author_avatar":"{{article.author.userprofile.avatar}}","author_mood":"{{article.author.userprofile.mood}}","author_sexual":"{{article.author.userprofile.sexual}}"}'>
+<main role="main" class="App-main" data-module="article" data-article-content="{{article.content}}" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}","article_id":"{{article.id}}","article_title":"{{article.title}}","article_click_nums":"{{article.click_nums}}","article_like_nums":"{{article.like_nums}}","article_comment_nums":"{{article.comment_nums}}","article_pub_date":"{{article.pub_date}}","author_id":"{{article.author__id}}","author_name":"{{article.author__first_name}}","author_avatar":"{{article.author__userprofile__avatar}}","author_mood":"{{article.author__userprofile__mood}}","author_sexual":"{{article.author__userprofile__sexual}}"}'>
 
 <div class="Post-content">
 <!--<img class="TitleImage" src="" alt="">-->
@@ -45,10 +45,10 @@
 <div class="Post-topicsAndReviewer">
 <div class="TopicList Post-Topics">
 
-{% for topic in article.topics.all %}
+{% for topic in topics %}
 <div class="Tag Topic">
 <span class="Tag-content">
-<a class="TopicLink TopicPopover" href="/topic/{{topic.id}}/" data-topic-id="{{topic.id}}" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true">{{topic.name}}</a>
+<a class="TopicLink TopicPopover" href="/topic/{{topic.topics__id}}/" data-topic-id="{{topic.topics__id}}" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true">{{topic.topics__name}}</a>
 </span>
 </div>
 {% endfor %}
