--- a/question/templates/question/t_er_active.html
+++ b/question/templates/question/t_er_active.html
@@ -4,10 +4,10 @@
 <body class="Entry-body">
 {% include 'question/header.html' %}
 
-<main role="main" class="App-main" data-module="home" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}","user_avatar":"{{user.userprofile.avatar}}","er_id":"{{er.id}}","er_name":"{{er.first_name}}"
-,"er_avatar":"{{er.userprofile.avatar}}","er_mood":"{{er.userprofile.mood}}","er_intro":"{{er.userprofile.intro}}","er_sexual":"{{er.userprofile.sexual}}","er_residence":"{{er.userprofile.residence}}"
-,"er_job":"{{er.userprofile.job}}","followed":"{{followed}}","command":"{{command}}","subcmd":"{{subcmd}}"}'   data-dfs-ext='{"questions_num":"{{ext_info.questions_num}}","answers_num":"{{ext_info.answers_num}}"
-,"followtos_num":"{{ext_info.followtos_num}}","followers_num":"{{ext_info.followers_num}}","followtopics_num":"{{ext_info.followtopics_num}}","followquestions_num":"{{ext_info.followquestions_num}}"}'>
+<main role="main" class="App-main" data-module="home" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}","er_id":"{{er.id}}","er_name":"{{er.first_name}}"
+,"er_avatar":"{{er.userprofile__avatar}}","er_mood":"{{er.userprofile__mood}}","er_intro":"{{er.userprofile__intro}}","er_sexual":"{{er.userprofile__sexual}}","er_residence":"{{er.userprofile__residence}}"
+,"er_job":"{{er.userprofile__job}}","command":"{{command}}","subcmd":"{{subcmd}}"}'   data-dfs-ext='{"question_nums":"{{er.userprofile__question_nums}}","article_nums":"{{er.userprofile__article_nums}}","answer_nums":"{{er.userprofile__answer_nums}}"
+,"followto_nums":"{{er.userprofile__followto_nums}}","follower_nums":"{{er.userprofile__follower_nums}}","followtopic_nums":"{{er.userprofile__followtopic_nums}}","followquestion_nums":"{{er.userprofile__followquestion_nums}}"}'>
 <div>
 <div>
 <div id="ProfileHeader" class="ProfileHeader">
