--- a/question/templates/question/t_mytopic_mobile.html
+++ b/question/templates/question/t_mytopic_mobile.html
@@ -10,7 +10,7 @@
 {% include 'question/header_mobile.html' %}
 </div>
 
-<main role="main" class="App-main" data-module="mytopic" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}","user_avatar":"{{user.userprofile.avatar}}"}'>
+<main role="main" class="App-main" data-module="mytopic" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}"}'>
 
 <div id="mytopic">
 
