--- a/question/templates/question/t_search.html
+++ b/question/templates/question/t_search.html
@@ -5,7 +5,7 @@
 {% include 'question/header.html' %}
 
         <!--------------------main---------------------->
-<main role="main" class="App-main" data-module="search" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","search_keyword":"{{keyword}}","search_type":"{{type}}"}'>
+<main role="main" class="App-main" data-module="search" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}","search_keyword":"{{keyword}}","search_type":"{{type}}"}'>
 
 <div class="SearchTabs SearchTab-bottomShadow"  data-za-detail-view-path-module="SearchSwitchTabBar">
 <div class="SearchTabs-inner">
