--- a/question/templates/question/t_question_mobile.html
+++ b/question/templates/question/t_question_mobile.html
@@ -87,7 +87,7 @@
 <div class="QuestionAnswer-content">
 
 <div class="ScrollIntoMark">
-<div class="ContentItem AnswerItem" data-answer-id="{{push_answer.id}}" data-comment-nums="{{push_answer.comment_nums}}">
+<div class="ContentItem AnswerItem" data-content-id="{{push_answer.id}}" data-content-type="answer" data-comment-nums="{{push_answer.comment_nums}}">
 <div class="ContentItem-meta">
 <div class="AuthorInfo AnswerItem-authorInfo AnswerItem-authorInfo--related">
 <span class="UserLink AuthorInfo-avatarWrapper">
@@ -130,7 +130,7 @@
 <div id="appendArea" class="List" data-list-type="more">
 {% for answer in more_answers %}
 <div class="List-item ScrollIntoMark" id="0.9146450153755157">
-<div class="ContentItem AnswerItem" data-answer-id="{{answer.id}}" data-comment-nums="{{answer.comment_nums}}">
+<div class="ContentItem AnswerItem" data-content-id="{{answer.id}}" data-content-type="answer" data-comment-nums="{{answer.comment_nums}}">
 <div class="ContentItem-meta">
 <div class="AuthorInfo AnswerItem-authorInfo AuthorInfo--plain">
 <span class="UserLink AuthorInfo-avatarWrapper">
