improve code, invite

--- a/question/templates/question/t_question_mobile.html
+++ b/question/templates/question/t_question_mobile.html
@@ -196,6 +196,7 @@
 <div class="Topbar-title">
 <h2 class="QuestionInvitation-title">你可以邀请下面用户，快速获得回答</h2>
 </div>
+<!--
 <div class="Topbar-options">
 <div class="QuestionInvitation-input Input-wrapper">
 <input data-tooltip="也可以搜索职业、公司等资料" data-tooltip-position="bottom" class="Input" placeholder="搜索你想邀请的人">
@@ -204,12 +205,13 @@
 </div>
 </div>
 </div>
+-->
 </div>
 <div class="QuestionInvitation-content List">
 </div>
 </div>
 </div>
-<button data-dismiss="modal" aria-hidden="true" class="Button Modal-closeButton Button--plain 1close" aria-label="关闭" type="button"><svg class="Zi Zi--Close Modal-closeIcon" fill="currentColor" viewBox="0 0 24 24" width="24" height="24"><path d="M13.486 12l5.208-5.207a1.048 1.048 0 0 0-.006-1.483 1.046 1.046 0 0 0-1.482-.005L12 10.514 6.793 5.305a1.048 1.048 0 0 0-1.483.005 1.046 1.046 0 0 0-.005 1.483L10.514 12l-5.208 5.207a1.048 1.048 0 0 0 .006 1.483 1.046 1.046 0 0 0 1.482.005L12 13.486l5.207 5.208a1.048 1.048 0 0 0 1.483-.006 1.046 1.046 0 0 0 .005-1.482L13.486 12z" fill-rule="evenodd"></path></svg></button>
+<button data-dismiss="modal" aria-hidden="true" class="Button Modal-closeButton Button--plain 1close" style="right:0px;top:0px;padding:5px;" aria-label="关闭" type="button"><svg class="Zi Zi--Close Modal-closeIcon" fill="currentColor" viewBox="0 0 24 24" width="24" height="24"><path d="M13.486 12l5.208-5.207a1.048 1.048 0 0 0-.006-1.483 1.046 1.046 0 0 0-1.482-.005L12 10.514 6.793 5.305a1.048 1.048 0 0 0-1.483.005 1.046 1.046 0 0 0-.005 1.483L10.514 12l-5.208 5.207a1.048 1.048 0 0 0 .006 1.483 1.046 1.046 0 0 0 1.482.005L12 13.486l5.207 5.208a1.048 1.048 0 0 0 1.483-.006 1.046 1.046 0 0 0 .005-1.482L13.486 12z" fill-rule="evenodd"></path></svg></button>
 </div>
 </div>
 </div>
