change topic name

--- a/question/templates/question/t_mytopic.html
+++ b/question/templates/question/t_mytopic.html
@@ -10,7 +10,7 @@
 <div class="Card">
 <div class="Card-header">
 <div class="Card-headerText">
-<a target="_blank" href="/er/{{user.id}}/following/topics/">已关注的话题</a> 
+<a target="_blank" href="/er/{{user.id}}/following/topics/">已关注的栏目</a> 
 </div>
 </div>
 <div class="Card-section">
@@ -43,7 +43,7 @@
 </div>
 
 <div class="ContentLayout-sideColumn">
-    <div class="Card"><div class="topics-plaza"><a target="_blank" href="/topics/" class="Button Button--primary Button--green">进入话题广场</a><a target="_blank" href="/topics/" class="text">来这里发现更多有趣话题</a></div></div>
+    <div class="Card"><div class="topics-plaza"><a target="_blank" href="/topics/" class="Button Button--primary Button--green">进入栏目广场</a><a target="_blank" href="/topics/" class="text">来这里发现更多有趣栏目</a></div></div>
     <!--<div class="Card Banner" data-za-module="ExternalAdItem" data-za-detail-view-path-is_ad="true"><a class="Button Banner-link Button--plain" target="_blank" href="" type="button"><img class="Banner-image" src="" srcset="" alt="广告"></a><button class="Button Banner-close Button--plain" data-tooltip="不再显示" data-tooltip-position="bottom" type="button"><svg width="14" height="16" viewBox="0 0 12 12" class="Icon Icon--boldRemove" aria-hidden="true" style="height: 16px; width: 14px;"><title></title><g><path fill-rule="evenodd" d="M3 2L2 3l3 3-3 3 1 1 3-3 3 3 1-1-3-3 3-3-1-1-3 3"></path></g></svg></button></div>-->
     <div class="Card">
         <ul class="TopstorySideBar-navList">
