--- a/question/templates/question/t_mytopic_mobile.html
+++ b/question/templates/question/t_mytopic_mobile.html
@@ -18,7 +18,7 @@
 <div class="Card">
 <div class="Card-header">
 <div class="Card-headerText">
-<a id="myfollow" target="_blank" href="">已关注的话题</a> 
+<a id="myfollow" target="_blank" href="">已关注的栏目</a> 
 </div>
 </div>
 <div class="Card-section">
@@ -38,7 +38,7 @@
 <div class="Card">
 <div class="Card-header">
 <div class="Card-headerText">
-全部的话题
+全部的栏目
 </div>
 </div>
 <div class="List">
