--- a/question/templates/question/t_search_mobile.html
+++ b/question/templates/question/t_search_mobile.html
@@ -42,7 +42,7 @@
 <li role="tab" class="Tabs-item Tabs-item--noMeta"><div class="Tabs-link" data-search-type="all">综合</div></li>
 <li role="tab" class="Tabs-item Tabs-item--noMeta"><div class="Tabs-link" data-search-type="question">问题</div></li>
 <li role="tab" class="Tabs-item Tabs-item--noMeta"><div class="Tabs-link" data-search-type="people">用户</div></li>
-<li role="tab" class="Tabs-item Tabs-item--noMeta"><div class="Tabs-link" data-search-type="topic">话题</div></li>
+<li role="tab" class="Tabs-item Tabs-item--noMeta"><div class="Tabs-link" data-search-type="topic">栏目</div></li>
 </ul>
 </div>
 </div>
