--- a/question/templates/question/t_search.html
+++ b/question/templates/question/t_search.html
@@ -14,7 +14,7 @@
 <li role="tab" class="Tabs-item Tabs-item--noMeta" aria-controls="Search-all"><a class="Tabs-link is-active" data-search-type="all" href="/search?q={{keyword}}&amp;type=all">综合</a></li>
 <li role="tab" class="Tabs-item Tabs-item--noMeta" aria-controls="Search-question"><a class="Tabs-link" data-search-type="question" href="/search?q={{keyword}}&amp;type=question">问题</a></li>
 <li role="tab" class="Tabs-item Tabs-item--noMeta" aria-controls="Search-people"><a class="Tabs-link" data-search-type="people" href="/search?q={{keyword}}&amp;type=people">用户</a></li>
-<li role="tab" class="Tabs-item Tabs-item--noMeta" aria-controls="Search-topic"><a class="Tabs-link" data-search-type="topic" href="/search?q={{keyword}}&amp;type=topic">话题</a></li>
+<li role="tab" class="Tabs-item Tabs-item--noMeta" aria-controls="Search-topic"><a class="Tabs-link" data-search-type="topic" href="/search?q={{keyword}}&amp;type=topic">栏目</a></li>
 </ul>
 
 <!--<div class="Popover"><button class="Button Select-button Select-plainButton Button--plain" role="combobox" aria-expanded="false" type="button" aria-haspopup="true">时间不限<span style="display: inline-flex; align-items: center;">&#8203;<svg class="Zi Zi--Select Select-arrow" fill="currentColor" viewBox="0 0 24 24" width="24" height="24"><path d="M12 16.183l2.716-2.966a.757.757 0 0 1 1.064.001.738.738 0 0 1 0 1.052l-3.247 3.512a.758.758 0 0 1-1.064 0L8.22 14.27a.738.738 0 0 1 0-1.052.758.758 0 0 1 1.063 0L12 16.183zm0-9.365L9.284 9.782a.758.758 0 0 1-1.064 0 .738.738 0 0 1 0-1.052l3.248-3.512a.758.758 0 0 1 1.065 0L15.78 8.73a.738.738 0 0 1 0 1.052.757.757 0 0 1-1.063.001L12 6.818z" fill-rule="evenodd"></path></svg></span></button></div>-->
