change site name

--- a/question/templates/question/footer.html
+++ b/question/templates/question/footer.html
@@ -6,5 +6,5 @@
 <span class="Footer-item">违法和不良信息举报：010-82716601</span>
 <br>
 <a class="Footer-item" target="_blank" href="/">联系我们</a>
-<span> © 2018 大大大</span>
+<span> © 2018 大农令</span>
 </footer>
