--- a/question/templates/question/head.html
+++ b/question/templates/question/head.html
@@ -2,7 +2,7 @@
 {%load static %}
 <meta http-equiv="X-UA-Compatible" content="IE=11">
 <meta charset="utf-8">
-<title>首页 - 大大大</title>
+<title>首页 - 大农令</title>
 <!--
 <link rel="stylesheet" href="{% static 'common/bootstrap-3.3.7/css/bootstrap.min.css' %}">
 <link rel="stylesheet" href="{% static 'common/bootstrap-select-1.12.4/css/bootstrap-select.min.css' %}">
