--- a/question/templates/question/t_search_mobile.html
+++ b/question/templates/question/t_search_mobile.html
@@ -20,7 +20,7 @@
 <button class="Button--primary Button--green" style="float:right; width:62px; height:32px; line-height:30px; margin-top:7px; margin-right:6px; border:1px solid; border-radius:4px;" data-toggle="modal" data-target="#askModal">提问</button>
 <div role="search" style="position:absolute; width:auto;left:0px;right:73px;float:none;margin:7px 0 0 10px;">
 <div style="padding-right:30px;width:100%;height:33px;">
-<!--<input type="hidden" name="type" value="content"><label for="q" class="hide-text">知乎搜索</label>-->
+<!--<input type="hidden" name="type" value="content"><label for="q" class="hide-text">大农令搜索</label>-->
 <input type="text" style="" id="searchInput" name="q" autocomplete="off" value="" maxlength="100" placeholder="搜索你感兴趣的内容..." role="combobox" aria-autocomplete="list">
 <button id="search_button" type="button" style="position:absolute; top:0;right:0;background:0 0;border:0;width:30px;height:100%;">
 <!--<span class="hide-text">搜索</span>-->
