--- a/question/templates/question/t_signinup.html
+++ b/question/templates/question/t_signinup.html
@@ -7,7 +7,7 @@
     <!--<meta http-equiv="X-UA-Compatible" content="IE=11" />-->
     <meta http-equiv="X-UA-Compatible" content="IE=11">
     <meta charset="utf-8">
-    <title>大大大 登陆</title>
+    <title>大农令 登陆</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -29,7 +29,7 @@
     <div class="container" >
         <div class="row">
             <div class="banner col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3">
-            大大大
+            大农令
             </div>
         </div>
         <div class="row">
@@ -92,7 +92,7 @@
         <div class="row">
           <div class="11banner col-xs-10 col-xs-offset-2 col-sm-6 col-sm-offset-4 col-md-6 col-md-offset-4">
 						<div id="footer">
-						<a class="Footer-item" target="_blank" href="http://www.miitbeian.gov.cn">粤ICP备16003534号</a><br><a class="Footer-item" target="_blank" href="http://www.12377.cn">网上有害信息举报专区</a><br><span class="Footer-item">违法和不良信息举报：010-82716601</span><br><!--<a class="Footer-item" target="_blank" href="/jubao">儿童色情信息举报专区</a><br>--><a class="Footer-item" target="_blank" href="/">联系我们</a><span> © 2018 大大大</span>
+						<a class="Footer-item" target="_blank" href="http://www.miitbeian.gov.cn">粤ICP备16003534号</a><br><a class="Footer-item" target="_blank" href="http://www.12377.cn">网上有害信息举报专区</a><br><span class="Footer-item">违法和不良信息举报：010-82716601</span><br><!--<a class="Footer-item" target="_blank" href="/jubao">儿童色情信息举报专区</a><br>--><a class="Footer-item" target="_blank" href="/">联系我们</a><span> © 2018 大农令</span>
 						</div> 
           </div>
         </div>
