--- a/question/templates/question/head_mobile.html
+++ b/question/templates/question/head_mobile.html
@@ -1,7 +1,7 @@
 <head>
 {%load static %}
 <meta charset="utf-8">
-<title>知乎 - 发现更大的世界</title>
+<title>大农令 - 发现更大的世界</title>
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,viewport-fit=cover">
 <meta name="renderer" content="webkit">
 <meta name="force-rendering" content="webkit">
