--- a/question/templates/question/t_sign_mobile.html
+++ b/question/templates/question/t_sign_mobile.html
@@ -8,7 +8,7 @@
 <div class="LoadingBar"></div>
 <main role="main" class="App-main" data-module="sign" data-dfs-main='{}'>
 <div class="Login" style="1height: 624px;">
-<div class="SignFlowHeader"><svg viewBox="0 0 14 14" class="Icon Icon--remove" style="fill:#fff;height:14px;width:14px" width="14" height="14" aria-hidden="true"><title></title><g><path d="M8.486 7l5.208-5.207c.408-.408.405-1.072-.006-1.483-.413-.413-1.074-.413-1.482-.005L7 5.515 1.793.304C1.385-.103.72-.1.31.31-.103.724-.103 1.385.305 1.793L5.515 7l-5.21 5.207c-.407.408-.404 1.072.007 1.483.413.413 1.074.413 1.482.005L7 8.485l5.207 5.21c.408.407 1.072.404 1.483-.007.413-.413.413-1.074.005-1.482L8.485 7z"></path></g></svg><div class="SignFlowHeader-title">登录知乎</div><div class="SignFlowHeader-subTitle">发现更大的世界</div></div>
+<div class="SignFlowHeader"><svg viewBox="0 0 14 14" class="Icon Icon--remove" style="fill:#fff;height:14px;width:14px" width="14" height="14" aria-hidden="true"><title></title><g><path d="M8.486 7l5.208-5.207c.408-.408.405-1.072-.006-1.483-.413-.413-1.074-.413-1.482-.005L7 5.515 1.793.304C1.385-.103.72-.1.31.31-.103.724-.103 1.385.305 1.793L5.515 7l-5.21 5.207c-.407.408-.404 1.072.007 1.483.413.413 1.074.413 1.482.005L7 8.485l5.207 5.21c.408.407 1.072.404 1.483-.007.413-.413.413-1.074.005-1.482L8.485 7z"></path></g></svg><div class="SignFlowHeader-title">登录大农令</div><div class="SignFlowHeader-subTitle">发现更大的世界</div></div>
 
 <div id="register" class="is-hide">
 <form novalidate="" class="SignFlow Login-form" action="" method="post" onsubmit="return checkRegisterValid()">
