improve code for ie

--- a/question/templates/question/t_article_mobile.html
+++ b/question/templates/question/t_article_mobile.html
@@ -82,7 +82,7 @@
 <button disabled="" type="button" class="Button Button-comment-send  CommentEditor-singleButton Button--primary Button--green">评论</button>
 </div>
 <div>
-<div class="CommentList">
+<div class="CommentList CommentList--current">
 </div>
 </div>
 <div class="Comments-footer CommentEditor--normal CommentEditor--nouse  CommentEditor--nouse--bottom is-hide">
