--- a/question/templates/question/t_question.html
+++ b/question/templates/question/t_question.html
@@ -103,7 +103,7 @@
         </div>     
         </div>
         
-        <div style="float:right">
+        <div class="AnswerToolbar--close">
         <button  class="HideAnswerBar-nouse Button Button--plain" type="button">
         <svg class="Zi Zi--Close " fill="currentColor" viewBox="0 0 24 24" width="24" height="24"><path d="M13.486 12l5.208-5.207a1.048 1.048 0 0 0-.006-1.483 1.046 1.046 0 0 0-1.482-.005L12 10.514 6.793 5.305a1.048 1.048 0 0 0-1.483.005 1.046 1.046 0 0 0-.005 1.483L10.514 12l-5.208 5.207a1.048 1.048 0 0 0 .006 1.483 1.046 1.046 0 0 0 1.482.005L12 13.486l5.207 5.208a1.048 1.048 0 0 0 1.483-.006 1.046 1.046 0 0 0 .005-1.482L13.486 12z" fill-rule="evenodd"></path></svg></button>
         </div>
@@ -230,7 +230,7 @@
         <span>
         <button class="Button-like-nouse Button Button--plain" type="button" data-like-type="answer" data-like-id="{{answer.id}}"><svg viewBox="0 0 20 18" xmlns="http://www.w3.org/2000/svg" class="Icon Icon--like Icon--left" width="13" height="16" aria-hidden="true" style="height: 16px; width: 13px;"><title></title><g><path d="M.718 7.024c-.718 0-.718.63-.718.63l.996 9.693c0 .703.718.65.718.65h1.45c.916 0 .847-.65.847-.65V7.793c-.09-.88-.853-.79-.846-.79l-2.446.02zm11.727-.05S13.2 5.396 13.6 2.89C13.765.03 11.55-.6 10.565.53c-1.014 1.232 0 2.056-4.45 5.83C5.336 6.965 5 8.01 5 8.997v6.998c-.016 1.104.49 2 1.99 2h7.586c2.097 0 2.86-1.416 2.86-1.416s2.178-5.402 2.346-5.91c1.047-3.516-1.95-3.704-1.95-3.704l-5.387.007z"></path></g></svg>{{answer.like_nums}}</button>
         </span>
-        <button class="Button ContentItem-action Button--plain Button--withIcon Button--withLabel" type="button" data-answer-id="{{answer.id}}"><span style="display: inline-flex; align-items: center;">&#8203;<svg class="Zi Zi--Comment Button-zi" fill="currentColor" viewBox="0 0 24 24" width="1.2em" height="1.2em"><path d="M10.241 19.313a.97.97 0 0 0-.77.2 7.908 7.908 0 0 1-3.772 1.482.409.409 0 0 1-.38-.637 5.825 5.825 0 0 0 1.11-2.237.605.605 0 0 0-.227-.59A7.935 7.935 0 0 1 3 11.25C3 6.7 7.03 3 12 3s9 3.7 9 8.25-4.373 9.108-10.759 8.063z" fill-rule="evenodd"></path></svg></span>{{push_answer.comment_nums}} 条评论</button>
+        <button class="Button ContentItem-action Button--plain Button--withIcon Button--withLabel" type="button" data-answer-id="{{answer.id}}"><span style="display: inline-flex; align-items: center;">&#8203;<svg class="Zi Zi--Comment Button-zi" fill="currentColor" viewBox="0 0 24 24" width="1.2em" height="1.2em"><path d="M10.241 19.313a.97.97 0 0 0-.77.2 7.908 7.908 0 0 1-3.772 1.482.409.409 0 0 1-.38-.637 5.825 5.825 0 0 0 1.11-2.237.605.605 0 0 0-.227-.59A7.935 7.935 0 0 1 3 11.25C3 6.7 7.03 3 12 3s9 3.7 9 8.25-4.373 9.108-10.759 8.063z" fill-rule="evenodd"></path></svg></span>{{answer.comment_nums}} 条评论</button>
         <div class="Popover ShareMenu ContentItem-action"><div class="" aria-haspopup="true" aria-expanded="false"><img class="ShareMenu-fakeQRCode" src="" alt="微信二维码"><button class="Button Button--plain Button--withIcon Button--withLabel" type="button"><span style="display: inline-flex; align-items: center;">&#8203;<svg class="Zi Zi--Share Button-zi" fill="currentColor" viewBox="0 0 24 24" width="1.2em" height="1.2em"><path d="M2.931 7.89c-1.067.24-1.275 1.669-.318 2.207l5.277 2.908 8.168-4.776c.25-.127.477.198.273.39L9.05 14.66l.927 5.953c.18 1.084 1.593 1.376 2.182.456l9.644-15.242c.584-.892-.212-2.029-1.234-1.796L2.93 7.89z" fill-rule="evenodd"></path></svg></span>分享</button></div></div>
         <button class="Button ContentItem-less ContentItem-rightButton Button--plain is-hide" type="button"><span class="RichContent-collapsedText">收起</span><svg viewBox="0 0 10 6" class="Icon ContentItem-arrowIcon is-active Icon--arrow" width="10" height="16" aria-hidden="true" style="height: 16px; width: 10px;"><title></title><g><path d="M8.716.217L5.002 4 1.285.218C.99-.072.514-.072.22.218c-.294.29-.294.76 0 1.052l4.25 4.512c.292.29.77.29 1.063 0L9.78 1.27c.293-.29.293-.76 0-1.052-.295-.29-.77-.29-1.063 0z"></path></g></svg></button>
         </div>
@@ -286,7 +286,7 @@
         </div>
         </div>
         <div class="MemberButtonGroup AnswerAuthor-buttons">
-        <button class="Button FollowButton Button--primary Button--green" type="button" data-author-id="{{push_answer.author__id}}" data-author-name="{{push_answer.author__first_name}}" data-author-sexual="{{push_answer.author__userprofile__sexual}}" data-follow-type="people" data-followed="false" data-who="she">关注</button>
+        <button class="Button FollowButton Button--primary Button--green" type="button" data-author-id="{{push_answer.author__id}}" data-er-id="{{push_answer.author__id}}" data-author-name="{{push_answer.author__first_name}}" data-author-sexual="{{push_answer.author__userprofile__sexual}}" data-follow-type="people" data-followed="false" data-who="she">关注</button>
         <button class="Button" type="button" data-toggle="modal" data-target="#letterModal">发私信</button>
         </div>
         </div>
