--- a/question/templates/question/header.html
+++ b/question/templates/question/header.html
@@ -1,4 +1,5 @@
-<header role="banner" class="Sticky AppHeader">
+<!--<header role="banner" class="Sticky AppHeader">-->
+<header role="banner" class="Sticky AppHeader is-fixed" style="width: 100%; top: 0px; left: 0px;">
 <div class="AppHeader-inner">
 <a href="/" aria-label="大农令"><svg viewBox="0 0 200 91" class="Icon SiteLogo Icon--logo" width="64" height="30" aria-hidden="true" style="height: 30px; width: 64px;">
 <g transform="scale(0.84434706,1.1843471)">
@@ -61,3 +62,4 @@
 {% endifequal %}
 </div>
 </header>
+<div class="Sticky--holder" style="position: relative; top: 0px; right: 0px; bottom: 0px; left: 0px; display: block; float: none; margin: 0px; height: 52px;"></div>
