--- a/question/templates/question/t_write_mobile.html
+++ b/question/templates/question/t_write_mobile.html
@@ -25,11 +25,11 @@
 
 <div class="WriteIndex-titleInput Input-wrapper Input-wrapper--multiline">
 <!--<textarea rows="1" class="Input" placeholder="请输入标题" style="height: 44px;"></textarea>-->
-<input type="text" name="writeTitle" class="Input" placeholder="请输入标题" style="height: 44px;"></input>
+<input type="text" name="writeTitle" class="Input" placeholder="请输入文章标题" style="height: 44px;"></input>
 </div>
 
 <div class="Wirte-select">
-    <select id="1topics_select" name="topics_selected" class="selectpicker form-control" multiple data-live-search="true" data-live-search-placeholder="搜索栏目" data-max-options="5" data-style="Input-wrapper Input-wrapper--spread Input-wrapper--large" title="添加栏目">
+    <select id="1topics_select" name="topics_selected" class="selectpicker form-control" multiple data-live-search="true" data-live-search-placeholder="搜索并添加栏目" data-max-options="5" data-style="Input-wrapper Input-wrapper--spread Input-wrapper--large" title="添加栏目">
     </select>
 </div>
 
@@ -39,7 +39,7 @@
 </div>
 
 <div style="display:flex;justify-content:center;">
-<button class="WritePost Button Button--primary Button--green" disabled type="button">发表</button>
+<button class="WritePost Button Button--primary Button--green" disabled type="button">发表文章</button>
 </div>
 
 </form>
