--- a/static/common/mobile_main.css
+++ b/static/common/mobile_main.css
@@ -1009,6 +1009,7 @@ html[data-theme=dark] .Post-Main .PostIndex-reviewers{color:#606a80}
     box-sizing: border-box !important;
     height:unset;
 }
+.AnswerToolbar .note-editor{margin-bottom:0;}
 
 .btn-primary{background:#0f88eb;border: 1px solid #0f88eb;}
 .btn-primary:hover{background-color:#0d79d1;border: 1px solid #0d79d1;}
@@ -1046,7 +1047,10 @@ html[data-theme=dark] .Post-Main .PostIndex-reviewers{color:#606a80}
     border: 2px solid #fff;
     background: #000;
 }
-
+/************for signflow****************/
+.SignFlow .SignFlow-submitButton{padding:0;}
+.SignFlow .Register-submitButton{padding:0;}
+/************for signflow****************/
 /************for green config****************/
 .btn:disabled{cursor:default;opacity:.2}
 .btn-primary{background:#228b22;border: 1px solid #228b22;}
