--- a/question/templates/question/header_mobile.html
+++ b/question/templates/question/header_mobile.html
@@ -1,4 +1,5 @@
-<header class="Sticky MobileAppHeader" style="line-height: 50px;">
+<!--<header class="Sticky MobileAppHeader" style="line-height: 50px;">-->
+<header class="Sticky MobileAppHeader is-fixed" style="line-height: 50px; width: auto; top: 0px; left: 0px;">
 <div class="MobileAppHeader-inner">
 <a class="MobileAppHeader-logo" href="//www.danongling.com/" aria-label="大农令"><svg viewBox="0 0 200 91" width="56" height="28"><title></title>
 <g transform="scale(0.84434706,1.1843471)">
@@ -26,3 +27,4 @@
 {% endifequal %}
 </div>
 </header>
+<div class="Sticky--holder" style="position: static; top: auto; right: auto; bottom: auto; left: auto; display: block; float: none; margin: 0px; height: 53px;"></div>
