--- a/question/templates/question/t_setting_mobile.html
+++ b/question/templates/question/t_setting_mobile.html
@@ -6,10 +6,8 @@
 <div id="root">
 <div class="App">
 <div class="LoadingBar"></div>
-<div>
-
+<div class="Mobile-header is-hide">
 {% include 'question/header_mobile.html' %}
-
 </div>
 
 <main role="main" class="App-main" data-module="setting" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}","type":"{{type}}","conversation_id":"{{conversation_id}}"}'>
