--- a/question/templates/question/t_topic_mobile.html
+++ b/question/templates/question/t_topic_mobile.html
@@ -5,10 +5,8 @@
 <div id="root">
 <div class="App">
 <div class="LoadingBar"></div>
-<div>
-
+<div class="Mobile-header is-hide">
 {% include 'question/header_mobile.html' %}
-
 </div>
 <!--
 <div class="PageHeader">
