--- a/question/templates/question/t_mytopic_mobile.html
+++ b/question/templates/question/t_mytopic_mobile.html
@@ -5,8 +5,7 @@
 <div id="root">
 <div class="App">
 <div class="LoadingBar"></div>
-
-<div>
+<div class="Mobile-header is-hide">
 {% include 'question/header_mobile.html' %}
 </div>
 
