--- a/question/templates/question/t_search_mobile.html
+++ b/question/templates/question/t_search_mobile.html
@@ -5,10 +5,8 @@
 <div id="root">
 <div class="App">
 <div class="LoadingBar"></div>
-<div>
-
+<div class="Mobile-header is-hide">
 {% include 'question/header_mobile.html' %}
-
 </div>
 
 <main role="main" class="App-main" data-module="search" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}","search_keyword":"{{keyword}}","search_type":"{{type}}"}'>
