--- a/question/templates/question/t_write_mobile.html
+++ b/question/templates/question/t_write_mobile.html
@@ -6,7 +6,7 @@
 <div class="1App">
 <div class="LoadingBar">
 </div>
-<div>
+<div class="Mobile-header is-hide">
 {% include 'question/header_mobile.html' %}
 </div>
 
