--- a/question/templates/question/t_write.html
+++ b/question/templates/question/t_write.html
@@ -16,6 +16,11 @@
 </div>
 </div>
 
+<div class="WriteHeaderTitle">
+<h3 class="Write-title">写文章</h3>
+<div class="Write-subtitle">原创或装载文章与新闻</div>
+</div>
+
 <div class="WriteIndex-titleInput Input-wrapper Input-wrapper--multiline">
 <!--<textarea rows="1" class="Input" placeholder="请输入标题" style="height: 44px;"></textarea>-->
 <input type="text" name="writeTitle" class="Input" placeholder="请输入标题" style="height: 44px;"></input>
