--- a/question/templates/question/t_write_mobile.html
+++ b/question/templates/question/t_write_mobile.html
@@ -23,6 +23,11 @@
 </div>
 </div>
 
+<div class="WriteHeaderTitle">
+<h3 class="Write-title">写文章</h3>
+<div class="Write-subtitle">原创或装载文章与新闻</div>
+</div>
+
 <div class="WriteIndex-titleInput Input-wrapper Input-wrapper--multiline">
 <!--<textarea rows="1" class="Input" placeholder="请输入标题" style="height: 44px;"></textarea>-->
 <input type="text" name="writeTitle" class="Input" placeholder="请输入文章标题" style="height: 44px;"></input>
@@ -39,7 +44,7 @@
 </div>
 
 <div style="display:flex;justify-content:center;">
-<button class="WritePost Button Button--primary Button--green" disabled type="button">发表文章</button>
+<button class="WritePost Button Button--primary Button--green" disabled type="button">发表</button>
 </div>
 
 </form>
