--- a/static/common/mobile_main.css
+++ b/static/common/mobile_main.css
@@ -681,7 +681,7 @@ label {
 /*********for search*****************/
 .Highlight em{font-style:normal;color:#f75659}
 /**************************/
-/*----for write----------------*/
+/*----for writePage----------------*/
 .Layout {
     background: #fff;
     min-height: 660px;
@@ -692,10 +692,25 @@ label {
     width: auto;
     z-index: 1;
 }
+.Write-title {
+    margin-top: 20px;
+    font-size: 24px;
+    font-weight: 500;
+    color: #1a1a1a;
+    text-align: center;
+}
+.Write-subtitle {
+    padding: 0 38px;
+    margin-top: 4px;
+    font-size: 14px;
+    line-height: 1.5;
+    color: #8590a6;
+    text-align: center;
+}
 .WriteIndex-titleInput {
     margin: 16px 0;
     border: 0;
-    padding: 0;
+    padding: 4px 5px;
     height: auto;
     width: 100%;
     position: relative;
@@ -725,6 +740,7 @@ label {
     border-color: #fff;
 }
 .Wirte-content {
+    margin:1px;
     font-size: 18px;
 }
 .Wirte-content  .panel-default>.panel-heading {
@@ -758,6 +774,76 @@ label {
 .btn-group:focus{
     border-color: #aaa !important;
 }
+
+/*----for askPage----------------*/
+.Layout {
+    background: #fff;
+    min-height: 660px;
+}
+.Layout-main {
+    margin: 0 auto 0;
+    padding: 0;
+    width: auto;
+    z-index: 1;
+}
+.Ask-title {
+    margin-top: 20px;
+    font-size: 24px;
+    font-weight: 500;
+    color: #1a1a1a;
+    text-align: center;
+}
+.Ask-subtitle {
+    padding: 0 38px;
+    margin-top: 4px;
+    font-size: 14px;
+    line-height: 1.5;
+    color: #8590a6;
+    text-align: center;
+}
+
+.Ask-content {
+    padding: 0 5px 20px;
+    margin-top: 20px;
+    line-height: 1.7;
+    opacity: 1;
+}
+
+.note-editor.note-frame {
+    border: 1px solid #e7eaf1;
+    border-radius: 3px;
+}
+.note-btn.btn.btn-default.btn-sm {
+    border-color: #fff;
+}
+.panel-default>.panel-heading {
+    background-color:#fff;
+    border-color: #fff;
+}
+
+.Wirte-content  .panel-default>.panel-heading {
+    border-color: #fff;
+}
+
+.bootstrap-select .dropdown-toggle:focus {
+    outline:None !important;
+}
+.btn-group.open .dropdown-toggle {
+    -webkit-box-shadow: None !important;
+    box-shadow: None !important;
+
+}
+
+.bs-searchbox .form-control {
+    width: auto;
+}
+.form-control:focus{
+    border-color: #aaa;
+}
+.btn-group:focus{
+    border-color: #aaa !important;
+}
+
 
 /*----for article----------------*/
 
